2007-03-01
	* Steven Grimm <sgrimm@facebook.com>: Fix an off-by-one error in the
	  multithreaded version's message passing code.

2006-11-22
	* Steven Grimm <sgrimm@facebook.com>: Add support for multithreaded
	  execution. Run configure with "--enable-threads" to enable. See
	  doc/threads.txt for details.

2006-10-15
	* Steven Grimm <sgrimm@facebook.com>: Dynamic sizing of hashtable to
	  reduce collisions on very large caches and conserve memory on
	  small caches.

2006-10-13
	* Steven Grimm <sgrimm@facebook.com>: New faster hash function.

2006-09-20

	* don't listen on UDP by default; more clear message when UDP port in use

2006-09-09
	* release 1.2.0 (along with 1.1.13, which is the more tested branch)

	nobody has run 1.2.0 in production, to my knowledge.  facebook has run
	their pre-merge-with-trunk version, but bugs were discovered (and fixed)
	after the merge.  there might be more.  you've been warned.  :)

2006-09-04
	* improved autoconf libevent detection, from the Tor project.

2006-09-03
	* test suite and lot of expiration, delete, flush_all, etc corner
	  case bugs fixed (Brad Fitzpatrick)

2006-09-02
	* Nathan Neulinger <nneul@umr.edu>: fix breakage in expiration code
	  causing expiration times to not be processed correctly.

2006-08-21
	* Nathan Neulinger <nneul@umr.edu>: fix incompatabilities with
	  unix domain socket support and the UDP code and clean up stale 
	  sockets

2006-08-20
	* Nathan Neulinger <nneul@umr.edu>: unix domain socket support

2006-05-03
	* Steven Grimm <sgrimm@facebook.com>:  big bunch of changes:
	  big CPU reduction work, UDP-based interface, increased memory
	  efficiency.  (intertwined patch, committed all together)
	  <http://lists.danga.com/pipermail/memcached/2006-May/002164.html>
	  or see svn commit logs

2006-04-30
	* River Tarnell:  autoconf work for Solaris 10.  Brad:
	merge and verify it works on Nexenta.

2006-03-04
	* avva: bucket/generation patch (old, but Brad's just finally
	committing it)

2006-01-01